--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ python-dotenv==1.0.0
 email-validator==2.0.0.post2
 PyYAML==6.0.1
 python-dateutil==2.8.2
+pytesseract==0.3.10
+pdf2image==1.16.3
+nltk==3.8.1
+spacy==3.7.2
+regex==2023.10.3
+pdfplumber==0.10.3
